<resources>
    <string name="app_name">resit project</string>
    <string name="show_paid">Show Paid</string>
    <string name="show_unpaid">Show Unpaid</string>
    <string name="unit_booking">Unit Booking</string>
    <string name="ezapartments">EZApartments</string>
    <string name="view_bookings">View Bookings</string>
    <string name="view_summary">View Summary</string>
    <string name="login_help">Login Help</string>
    <string name="login_help_tip">Default username and password is set to \'admin\' and \'admin\'</string>
    <string name="price_guide">Price Guide</string>
    <string name="price_tip">Base Price: RM200 Subsequent Floors: + RM100</string>
    <string name="price_formula">Formula (RM): 200 + (100 * (Floor - 1))</string>
    <string name="login_ezapartments">EZApartments</string>
    <string name="login">Login</string>
    <string name="make_booking">Make Booking</string>
    <string name="make_booking_tip">Floor: 1 to 10 Unit: 1 to 4</string>
    <string name="button_checkbooking">Check</string>
    <string name="button_confirmbooking">Confirm Booking</string>
    <string name="summary_label_apartment">Apartment</string>
    <string name="summary_apartment_header1">Name:</string>
    <string name="summary_apartment_info1">The Resit</string>
    <string name="summary_apartment_header2">Size:</string>
    <string name="summary_apartment_info2">10 Floors x 4 Units x 500 sq.ft</string>
    <string name="summary_apartment_header3">Location:</string>
    <string name="summary_apartment_info3">100 That Street</string>
    <string name="summary_label_bookings">Bookings</string>
    <string name="summary_bookings_header1">Units Booked:</string>
    <string name="summary_bookings_header2">Unpaid:</string>
    <string name="summary_bookings_header3">Paid:</string>
    <string name="summary_label_totalavenue">Total Revenue</string>
    <string name="summary_totalrevenue_header1">Earnings:</string>
    <string name="summary_totalrevenue_header2">Potential Gain:</string>
    <string name="string_menu_info">Info</string>
    <string name="menu_info">Info</string>
    <string name="menu_logout">Logout</string>
    <string name="show_all">Show All</string>
</resources>